Modo celular finalizado

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         }
         .text h1{
             font-family: "Open Sans" , sans-serif;
-            font-size: 21px;
+            font-size: 22px;
             font-weight: 800;
             transition: all 1s .5s linear;
             cursor: pointer;
@@ -65,12 +65,13 @@
             color: red;
             margin-top: 25px;
             color: gray;
-            font-size: 20px;
+            font-size: 15px;
             letter-spacing: 1.1px;
         }
         .text-p{
             float: left;
-            margin-top: 20px;
+            margin-top: 30px;
+            font-size: 14px;
         }
         .text-p:nth-child(3){
             margin-right: 85px;
@@ -83,23 +84,27 @@
         .criador{
             margin-top: 80px;
             border-top: solid 2px gray;
+            padding-bottom: 15px;
+            box-sizing: border-box;
         }
         .criador img{
             border-radius: 50%;
-            width: 35px;
-            height: 35px;
+            width: 38px;
+            height: 38px;
             float: left;
-            margin-right: 20px;
+            margin-right: 12px;
             margin-top: 20px;
         }
-        .craidor p{
-            float: right;
-            width: 300px;
+        .criador p a{
+            font-size: 11px;
+            text-decoration: unset;
+            color: white;
+            text-transform: uppercase;
         }
         svg{
             float: left;
-            margin-right: 10px;
-            margin-top: 15px;
+            margin-right: 5px;
+            margin-top: 25px;
         }
 
     </style>
@@ -113,13 +118,13 @@
                 <div class="text">
                     <h1>Equilibrium #3429</h1>
                     <p>Our Equilibrium collection promotes balance and calm.</p>
-                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="20" height="20" viewBox="0 0 48 48"><path fill="#7880e7"  d="M11,24L25,2l14,22l-14,8L11,24z"></path><path fill="#5c64c7" d="M25,2l14,22l-14,8V2z"></path><path fill="#7880e7" d="M11,27l14,8l14-8L25,46L11,27z"></path><path fill="#5c64c7" d="M25,35l14-8L25,46V35z M11,24l14-6l14,6l-14,8L11,24z"></path><path fill="#2a3192" d="M25,18l14,6l-14,8V18z"></path></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 48 48"><path fill="#7880e7"  d="M11,24L25,2l14,22l-14,8L11,24z"></path><path fill="#5c64c7" d="M25,2l14,22l-14,8V2z"></path><path fill="#7880e7" d="M11,27l14,8l14-8L25,46L11,27z"></path><path fill="#5c64c7" d="M25,35l14-8L25,46V35z M11,24l14-6l14,6l-14,8L11,24z"></path><path fill="#2a3192" d="M25,18l14,6l-14,8V18z"></path></svg>
                     <p class="text-p">Ethereum 0.041 ETH</p>
                     <p class="text-p">3 days left<p>
                 </p>
                 <div class="criador">
                     <img src="img/shiba-inu-comprar.png" alt="foto do criador">
-                    <p>Criado por Thiago Campos</p>
+                    <p><a href="https://github.com/thgcamposantos" target="_blank" title="Github Thiago Campos">Criado por Thiago Campos</a></p>
                 </div>
             </div>
         </div>
