--- a/index.html
+++ b/index.html
@@ -8,106 +8,8 @@
     <link rel="icon" href="img/shiba-inu-comprar.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/home.css">
     <title>Card</title>
-    <style>
-
-        /* AJEITAR NO MEDIA QUERIES E MELHORAR */
-
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        body{
-            background-image: url(img/pexels-felix-mittermeier-1146134.jpg);
-            background-position: center;
-            background-size: cover;
-            background-repeat: no-repeat;
-            /* height: 100vh; */
-            font-family: "Open Sans" , sans-serif;
-        }
-        .card-completo{
-            width: 250px;
-            max-width: 400px;
-            margin: 10vh auto;
-            text-align: center;
-            padding: 20px;
-            background-color: #0A152B;
-            box-shadow: 10px 10px 15px black , -10px -10px 15px black;
-            color: white;
-            border-radius: 10px;
-        }
-        .imagem img{
-            height: 220px;
-            width: 250px;
-            max-width: 350px;
-            border-radius: 10px;
-        }
-        .imagem img:hover{
-            background-color: white;
-        }
-        .text{
-            text-align: left;
-            margin-top: 15px;
-            position: relative;
-        }
-        .text h1{
-            font-family: "Open Sans" , sans-serif;
-            font-size: 22px;
-            font-weight: 800;
-            transition: all 1s .5s linear;
-            cursor: pointer;
-            margin: 0px 0px 25px 0px;
-        }
-        .text h1:hover{
-            color: #00f8d3;
-        }
-        .text p:nth-child(2){
-            color: red;
-            margin-top: 25px;
-            color: gray;
-            font-size: 15px;
-            letter-spacing: 1.1px;
-        }
-        .text-p{
-            float: left;
-            margin-top: 30px;
-            font-size: 14px;
-        }
-        .text-p:nth-child(3){
-            margin-right: 85px;
-            color: #00f8d3;
-        }
-        .text-p:nth-child(5){
-            position: absolute;
-            right: 0px;
-        }
-        .criador{
-            margin-top: 80px;
-            border-top: solid 2px gray;
-            padding-bottom: 15px;
-            box-sizing: border-box;
-        }
-        .criador img{
-            border-radius: 50%;
-            width: 38px;
-            height: 38px;
-            float: left;
-            margin-right: 12px;
-            margin-top: 20px;
-        }
-        .criador p a{
-            font-size: 11px;
-            text-decoration: unset;
-            color: white;
-            text-transform: uppercase;
-        }
-        svg{
-            float: left;
-            margin-right: 5px;
-            margin-top: 25px;
-        }
-
-    </style>
 </head>
 <body>
         <div id="container">
