--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <p>Our Equilibrium collection promotes balance and calm.</p>
                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0 0 48 48"><path fill="#7880e7"  d="M11,24L25,2l14,22l-14,8L11,24z"></path><path fill="#5c64c7" d="M25,2l14,22l-14,8V2z"></path><path fill="#7880e7" d="M11,27l14,8l14-8L25,46L11,27z"></path><path fill="#5c64c7" d="M25,35l14-8L25,46V35z M11,24l14-6l14,6l-14,8L11,24z"></path><path fill="#2a3192" d="M25,18l14,6l-14,8V18z"></path></svg>
                     <p class="text-p">Ethereum 0.041 ETH</p>
-                    <p class="text-p">3 days left<p>
-                </p>
+                    <p class="text-p">3 days left</p>
+                </div>
                 <div class="criador">
                     <img src="img/shiba-inu-comprar.png" alt="foto do criador">
                     <p><a href="https://github.com/thgcamposantos" target="_blank" title="Github Thiago Campos">Criado por Thiago Campos</a></p>
